6.4/_sources/module/index.rst.txt
模块手册
########

**GMT 主程序与脚本**

.. hlist::
    :columns: 4

    - :doc:`gmt`
    - :doc:`gmt-config`
    - :doc:`gmtswitch`

**GMT 模块（已翻译整理）**

.. hlist::
    :columns: 4

    - :doc:`basemap`
    - :doc:`begin`
    - :doc:`blockmean`
    - :doc:`blockmedian`
    - :doc:`blockmode`
    - :doc:`clear`
    - :doc:`clip`
    - :doc:`coast`
    - :doc:`colorbar`
    - :doc:`contour`
    - :doc:`coupe`
    - :doc:`dimfilter`
    - :doc:`docs`
    - :doc:`end`
    - :doc:`figure`
    - :doc:`filter1d`
    - :doc:`fitcircle`
    - :doc:`gmtbinstats`
    - :doc:`gmtconnect`
    - :doc:`gmtconvert`
    - :doc:`gmtdefaults`
    - :doc:`gmtget`
    - :doc:`gmtinfo`
    - :doc:`gmtlogo`
    - :doc:`gmtmath`
    - :doc:`gmtselect`
    - :doc:`gmtset`
    - :doc:`gmtsimplify`
    - :doc:`gmtspatial`
    - :doc:`gmtsplit`
    - :doc:`gmtvector`
    - :doc:`gmtwhich`
    - :doc:`grd2cpt`
    - :doc:`grd2xyz`
    - :doc:`grdblend`
    - :doc:`grdclip`
    - :doc:`grdcontour`
    - :doc:`grdconvert`
    - :doc:`grdcut`
    - :doc:`grdedit`
    - :doc:`grdfft`
    - :doc:`grdfill`
    - :doc:`grdfilter`
    - :doc:`grdgdal`
    - :doc:`grdimage`
    - :doc:`grdinfo`
    - :doc:`grdlandmask`
    - :doc:`grdmask`
    - :doc:`grdmath`
    - :doc:`grdpaste`
    - :doc:`grdproject`
    - :doc:`grdsample`
    - :doc:`grdselect`
    - :doc:`grdtrack`
    - :doc:`grdtrend`
    - :doc:`grdvector`
    - :doc:`grdview`
    - :doc:`grdvolume`
    - :doc:`gshhg`
    - :doc:`histogram`
    - :doc:`image`
    - :doc:`img2google`
    - :doc:`img2grd`
    - :doc:`inset`
    - :doc:`kml2gmt`
    - :doc:`legend`
    - :doc:`makecpt`
    - :doc:`mapproject`
    - :doc:`mask`
    - :doc:`meca`
    - :doc:`nearneighbor`
    - :doc:`plot`
    - :doc:`polar`
    - :doc:`project`
    - :doc:`psconvert`
    - :doc:`rose`
    - :doc:`sac`
    - :doc:`sample1d`
    - :doc:`solar`
    - :doc:`spectrum1d`
    - :doc:`sph2grd`
    - :doc:`sphdistance`
    - :doc:`sphinterpolate`
    - :doc:`sphtriangulate`
    - :doc:`subplot`
    - :doc:`surface`
    - :doc:`ternary`
    - :doc:`text`
    - :doc:`triangulate`
    - :doc:`velo`
    - :doc:`wiggle`
    - :doc:`xyz2grd`
    - :doc:`earthtide`
    - :doc:`gpsgridder`
    - :doc:`x2sys_init`
    - :doc:`x2sys_binlist`
    - :doc:`x2sys_cross`
    - :doc:`x2sys_datalist`
    - :doc:`x2sys_get`
    - :doc:`x2sys_list`
    - :doc:`x2sys_merge`
    - :doc:`x2sys_put`
    - :doc:`x2sys_report`
    - :doc:`x2sys_solve`
    - :doc:`gmtflexure`
    - :doc:`gmtgravmag3d`
    - :doc:`gravfft`
    - :doc:`grdflexure`
    - :doc:`grdgravmag3d`
    - :doc:`grdredpol`
    - :doc:`grdseamount`
    - :doc:`gravprisms`
    - :doc:`talwani2d`
    - :doc:`talwani3d`
    - :doc:`mgd77manage`
    - :doc:`mgd77convert`
    - :doc:`mgd77header`
    - :doc:`mgd77info`
    - :doc:`mgd77list`
    - :doc:`mgd77magref`
    - :doc:`mgd77path`
    - :doc:`mgd77sniffer`
    - :doc:`mgd77track`

**GMT 模块（尚未翻译整理，欢迎贡献）**

.. hlist::
    :columns: 4

    - :doc:`gmt:batch`
    - :doc:`gmt:events`
    - :doc:`gmt:gmt2kml`
    - :doc:`gmt:gmtregress`
    - :doc:`gmt:grd2kml`
    - :doc:`gmt:grdgradient`
    - :doc:`gmt:grdhisteq`
    - :doc:`gmt:grdinterpolate`
    - :doc:`gmt:grdmix`
    - :doc:`gmt:greenspline`
    - :doc:`gmt:movie`
    - :doc:`gmt:plot3d`
    - :doc:`gmt:supplements/segy/segy2grd`
    - :doc:`gmt:supplements/segy/segy`
    - :doc:`gmt:supplements/segy/segyz`
    - :doc:`gmt:supplements/spotter/backtracker`
    - :doc:`gmt:supplements/spotter/gmtpmodeler`
    - :doc:`gmt:supplements/spotter/grdpmodeler`
    - :doc:`gmt:supplements/spotter/grdrotater`
    - :doc:`gmt:supplements/spotter/grdspotter`
    - :doc:`gmt:supplements/spotter/hotspotter`
    - :doc:`gmt:supplements/spotter/originater`
    - :doc:`gmt:supplements/spotter/polespotter`
    - :doc:`gmt:supplements/spotter/rotconverter`
    - :doc:`gmt:supplements/spotter/rotsmoother`
    - :doc:`gmt:trend1d`
    - :doc:`gmt:trend2d`

**GMT 模块（按功能分类）[包含了尚未翻译模块]**

.. hlist::
    :columns: 4

    - :ref:`主程序/脚本 <module_program>`
    - :ref:`现代模式会话管理 <module_session_management>`
    - :ref:`绘图相关模块 <module_plotting>`
    - :ref:`1D 数据处理 <module_1D_data_processing>`
    - :ref:`2D 数据处理 <module_2D_data_processing>`
    - :ref:`参数设置 <module_parameter_setting>`
    - :ref:`信息提取 <module_information_retrieval>`
    - :ref:`格式转换 <module_format_conversion>`
    - :ref:`mgd77 相关模块 <module_mgd77>`
    - :ref:`x2sys 相关模块 <module_x2sys>`
    - :ref:`SPOTTER 相关模块 <module_spotter>`
    - :ref:`POTENTIAL 相关模块 <module_potential>`
    - :ref:`其他模块 <module_other>`
    - :ref:`其他脚本 <other_scripts>`

================================================ ========================================================================
模块类别和模块名                                 功能
================================================ ========================================================================
**主程序/脚本**                                  .. _module_program:
:doc:`gmt`                                       GMT 主程序
:doc:`gmt-config`                                返回 GMT 动态函数库的基本信息
**现代模式会话管理**                             .. _module_session_management:
:doc:`begin`                                     初始化一个新的 GMT 现代模式会话
:doc:`clear`                                     删除缓存目录、数据目录、会话目录以及当前配置文件
:doc:`docs`                                      打开指定模块的 HTML 文档
:doc:`end`                                       结束现代模式会话，生成并显示图片
:doc:`figure`                                    设置当前图片的属性
:doc:`inset`                                     管理和设置图中图模式
:doc:`subplot`                                   管理和设置子图模式
**绘图相关模块**                                 .. _module_plotting:
:doc:`basemap`                                   绘制底图
:doc:`coast`                                     在地图上绘制海岸线、河流、国界线
:doc:`plot`                                      在图上绘制线段、多边形和符号
:doc:`text`                                      在图上写文本
:doc:`colorbar`                                  在图上绘制色标
:doc:`legend`                                    绘制图例
:doc:`histogram`                                 统计并绘制直方图
:doc:`rose`                                      绘制极坐标下的直方图（sector 图、rose 图或 windrose 图）
:doc:`gmt:events`                                绘制特定时刻的事件符号和标签信息
:doc:`gmt:plot3d`                                在 3D 图上绘制线段、多边形和符号
:doc:`image`                                     将 EPS 或光栅图片放在图上
:doc:`solar`                                     计算或/和绘制晨昏线以及民用、航海用以及天文用曙暮光区域
:doc:`clip`                                      打开或关闭多边形裁剪路径
:doc:`sac`                                       在地图上绘制 SAC 格式的地震波形数据
:doc:`meca`                                      在地图上绘制震源机制解
:doc:`polar`                                     在震源球上绘制台站极性
:doc:`velo`                                      在地图上绘制速度矢量、十字线、楔形图
:doc:`coupe`                                     绘制震源机制解的剖面图
:doc:`ternary`                                   绘制三角图解
:doc:`mask`                                      将没有数据覆盖的区域裁剪或覆盖住
:doc:`contour`                                   使用直接三角化法对数据进行等值线绘制
:doc:`wiggle`                                    沿着测线绘制 z = f(x,y) 数据
:doc:`gmt:supplements/segy/segy`                 在图上绘制 SEGY 文件
:doc:`gmt:supplements/segy/segyz`                在 3D 图上绘制 SEGYZ 文件
:doc:`gmtlogo`                                   在图上绘制 GMT 图形 logo
:doc:`grdvector`                                 根据两个网格文件绘制矢量场
:doc:`grdimage`                                  在图上绘制网格数据
:doc:`grdcontour`                                根据网格文件绘制等值线
:doc:`grdview`                                   利用网格文件绘制 3D 视角图或表面网格图
:doc:`gmt:movie`                                 制作动画
**1D 数据处理**                                  .. _module_1D_data_processing:
:doc:`makecpt`                                   生成 CPT 文件
:doc:`gmtselect`                                 根据多个准则筛选数据
:doc:`project`                                   将数据点投影到线或大圆路径上，生成测线，坐标转换
:doc:`gmtconvert`                                表数据格式转换、列提取、列粘贴
:doc:`gmt:trend1d`                               一维数据的多项式拟合
:doc:`fitcircle`                                 拟合球面上数据点的平均位置及圆弧
:doc:`gmtsimplify`                               使用 Douglas-Peucker 算法对线段做简化
:doc:`filter1d`                                  对 1D 表数据做时间域滤波
:doc:`gmtconnect`                                将端点接近的线段连接起来
:doc:`sample1d`                                  对 1D 表数据进行重采样
:doc:`spectrum1d`                                计算一个时间序列的自功率谱，或两个时间序列的互功率谱
:doc:`gmtmath`                                   对表数据进行数学计算操作
:doc:`mapproject`                                地图变换的正变换和逆变换
:doc:`gmtspatial`                                点、线段和多边形的地理空间操作
:doc:`gmtvector`                                 2D 和 3D 下笛卡尔矢量操作
:doc:`gmt:gmtregress`                            1D 数据的线性回归
**2D 数据处理**                                  .. _module_2D_data_processing:
:doc:`grdcut`                                    从一个网格文件中裁剪出一个矩形子区域生成新的网格文件
:doc:`grdpaste`                                  将两个网格沿着其共同边界拼接成一个文件
:doc:`grdblend`                                  将多个部分重叠的网格文件合并成一个网格文件
:doc:`gmt:grdtrack`                              获取指定地理位置处的网格值
:doc:`gmt:grdgradient`                           计算网格的方向梯度
:doc:`grdclip`                                   对网格文件的 Z 值进行截断
:doc:`grd2xyz`                                   将网格文件转换成表数据
:doc:`grdconvert`                                在不同的网格格式之间互相转换
:doc:`grdedit`                                   修改网格文件的头段或内容
:doc:`grdinfo`                                   从网格文件中提取基本信息
:doc:`grdsample`                                 对网格文件做重采样
:doc:`grdselect`                                 根据多个空间标准选择网格数据
:doc:`grdlandmask`                               根据海岸线数据创建陆地-海洋的 mask 网格文件
:doc:`grdvolume`                                 计算网格数据中某个等值线所包围的表面积和体积
:doc:`grdtrend`                                  拟合网格的趋势面并计算残差
:doc:`grdproject`                                对网格数据做地图变换和逆变换
:doc:`grdmask`                                   根据多边形数据或点数据创建 mask 网格文件
:doc:`grdmath`                                   对网格文件做数学计算操作
:doc:`grdfilter`                                 对网格文件做空间域或时间域滤波
:doc:`grdfft`                                    对网格文件在波数域或频率域做操作
:doc:`grdfill`                                   对网格文件中的无值区域进行插值
:doc:`gmt:grdhisteq`                             对网格做直方图均衡
:doc:`grd2cpt`                                   根据网格文件的值生成 CPT 文件
:doc:`blockmean`                                 使用均值估计对 (x,y,z) 数据做区块处理
:doc:`blockmedian`                               使用中位数估计对 (x,y,z) 数据做区块处理
:doc:`blockmode`                                 使用众数估计对 (x,y,z) 数据做区块处理
:doc:`gmtbinstats`                               统计落入网格节点的数据
:doc:`surface`                                   使用可调节张量连续曲率样条插值法对数据进行网格化
:doc:`gmtsplit`                                  将表数据拆分为单独的数据段
:doc:`triangulate`                               对表数据做三角剖分、Voronoi 图计算和网格化
:doc:`nearneighbor`                              使用 "Nearest neighbor" 算法对数据进行网格化
:doc:`gmt:trend2d`                               二维数据的多项式拟合
:doc:`gmt:greenspline`                           使用格林函数样条进行插值
:doc:`sph2grd`                                   根据球谐系数计算网格
:doc:`sphdistance`                               计算球面上的 Voronoi 距离、节点或自然最邻近网格
:doc:`sphinterpolate`                            球面数据的网格化
:doc:`sphtriangulate`                            球面数据的 Delaunay 三角网或 Voronoi 图构建
:doc:`dimfilter`                                 在空间域对网格数据做方向中值滤波
**参数设置**                                     .. _module_parameter_setting:
:doc:`gmtdefaults`                               列出所有 GMT 参数的当前值
:doc:`gmtset`                                    修改单个或多个 GMT 参数的值
:doc:`gmtget`                                    列出单个或多个 GMT 参数的当前值
**信息提取**                                     .. _module_information_retrieval:
:doc:`grdinfo`                                   从网格文件中提取基本信息
:doc:`gmtinfo`                                   从表数据中提取信息
:doc:`gmtwhich`                                  返回指定文件的完整路径
**格式转换**                                     .. _module_format_conversion:
:doc:`xyz2grd`                                   将 XYZ 数据或 Z 数据转换成网格文件
:doc:`grd2xyz`                                   将网格文件转换成表数据
:doc:`kml2gmt`                                   将 Google Earth 的 KML 文件转换为 GMT 表数据
:doc:`gmt:gmt2kml`                               将 GMT 表数据转换为 Google Earth 的 KML 文件
:doc:`grdconvert`                                在不同的网格格式之间互相转换
:doc:`psconvert`                                 将 GMT 生成的 PS 文件转换为其他图片格式
**mgd77 相关模块**                               .. _module_mgd77:
:doc:`mgd77manage`                               管理 MGD77+ 文件
:doc:`mgd77convert`                              将 MGD77 数据转换为其他格式
:doc:`mgd77header`                               从 A77 文件创建 MGD77 头部信息
:doc:`mgd77info`                                 提取 MGD77 文件信息
:doc:`mgd77list`                                 提取 MGD77 文件中的数据
:doc:`mgd77magref`                               计算 IGRF 或 CM4 磁场模型
:doc:`mgd77path`                                 返回 MGD77 测线路径
:doc:`mgd77sniffer`                              MGD77 测线沿轨质量控制
:doc:`mgd77track`                                绘制 MGD77 测线轨迹
**x2sys 相关模块**                               .. _module_x2sys:
:doc:`x2sys_binlist`                             从轨迹观测文件创建网格索引列表
:doc:`x2sys_cross`                               计算轨迹观测数据之间的交叉点
:doc:`x2sys_datalist`                            提取轨迹数据文件中的内容
:doc:`x2sys_get`                                 从轨迹网格索引列表中筛选轨迹列表
:doc:`x2sys_init`                                初始化 x2sys 轨迹数据库
:doc:`x2sys_list`                                从交叉点计算结果中提取子集
:doc:`x2sys_merge`                               合并交叉带你列表
:doc:`x2sys_put`                                 从轨迹网格索引文件更新轨迹数据库
:doc:`x2sys_report`                              统计交叉点信息
:doc:`x2sys_solve`                               使用最小二乘平差改正系统误差
**SPOTTER 相关模块**                             .. _module_spotter:
:doc:`gmt:supplements/spotter/backtracker`       Generate forward and backward flowlines and hotspot tracks
:doc:`gmt:supplements/spotter/gmtpmodeler`       Evaluate a plate motion model at given locations
:doc:`gmt:supplements/spotter/grdpmodeler`       Evaluate a plate motion model on a geographic grid
:doc:`gmt:supplements/spotter/grdrotater`        Finite rotation reconstruction of geographic grid
:doc:`gmt:supplements/spotter/originater`        Associate seamounts with nearest hotspot point sources
:doc:`gmt:supplements/spotter/rotconverter`      Manipulate total reconstruction and stage rotations
:doc:`gmt:supplements/spotter/rotsmoother`       Get mean rotations and covarience from set of finate rotations
:doc:`gmt:supplements/spotter/grdspotter`        Create CVA image from a gravity or topography grid
:doc:`gmt:supplements/spotter/hotspotter`        Create CVA image from seamount locations
**POTENTIAL 相关模块**                           .. _module_potential:
:doc:`gmtflexure`                                计算 2-D 载荷产生的力，弯矩以及形变
:doc:`grdflexure`                                计算 3-D 载荷在不同流变基础下产生的形变
:doc:`gmtgravmag3d`                              计算 3-D 实体产生的重力/磁异常
:doc:`grdgravmag3d`                              计算一个或者两个网格的重力/磁异常
:doc:`gravfft`                                   网格重力的谱计算，均衡，导纳，以及相干性计算
:doc:`grdredpol`                                 计算连续化极（Reduction To the Pole, RTP）
:doc:`grdseamount`                               创建合成海山
:doc:`gravprisms`                                计算三维垂直棱柱（可变密度海山）产生的位异常
:doc:`talwani2d`                                 计算 2-D 实体产生的位异常
:doc:`talwani3d`                                 计算 3-D 实体产生的位异常
**其他模块**                                     .. _module_other:
:doc:`gmt:supplements/segy/segy2grd`             Converting SEGY data to a GMT grid
:doc:`grdgdal`                                   在 GMT 中运行 GDAL 命令
:doc:`gshhg`                                     从 GSHHG 或 WDBII 数据文件中提取数据
:doc:`img2google`                                由测深墨卡托 img 网格创建谷歌地球 KML 文件
:doc:`img2grd`                                   从墨卡托 img 格式文件中提取网格数据
:doc:`gpsgridder`                                使用格林函数内插 GPS 速度向量
:doc:`earthtide`                                 计算固体地球潮汐网格或者时间序列
**其他脚本**                                     .. _other_scripts:
:doc:`gmtswitch`                                 GMT 多版本之间切换
================================================ ========================================================================

.. raw:: latex

   % numbering and show section, i.e. module names, not subsections
   % protect it to make it also work with toc
   % see https://tex.stackexchange.com/questions/4102/
   \addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
   \setcounter{tocdepth}{1}
   \setcounter{secnumdepth}{1}

.. toctree::
   :maxdepth: 1
   :hidden:

   basemap
   begin
   blockmean
   blockmedian
   blockmode
   clear
   clip
   coast
   colorbar
   contour
   coupe
   dimfilter
   docs
   end
   figure
   filter1d
   fitcircle
   gmt
   gmt-config
   gmtbinstats
   gmtconnect
   gmtconvert
   gmtdefaults
   gmtget
   gmtinfo
   gmtlogo
   gmtmath
   gmtselect
   gmtset
   gmtsimplify
   gmtspatial
   gmtsplit
   gmtswitch
   gmtvector
   gmtwhich
   grd2cpt
   grd2xyz
   grdblend
   grdclip
   grdcontour
   grdconvert
   grdcut
   grdedit
   grdfft
   grdfill
   grdfilter
   grdgdal
   grdimage
   grdinfo
   grdlandmask
   grdmask
   grdmath
   grdpaste
   grdproject
   grdsample
   grdselect
   grdtrack
   grdtrend
   grdvector
   grdview
   grdvolume
   gshhg
   histogram
   image
   img2google
   img2grd
   inset
   kml2gmt
   legend
   makecpt
   mapproject
   mask
   meca
   nearneighbor
   plot
   polar
   project
   psconvert
   rose
   sac
   sample1d
   solar
   spectrum1d
   sph2grd
   sphdistance
   sphinterpolate
   sphtriangulate
   subplot
   surface
   ternary
   text
   triangulate
   velo
   wiggle
   xyz2grd
   earthtide
   gpsgridder
   x2sys_init
   x2sys_binlist
   x2sys_cross
   x2sys_datalist
   x2sys_get
   x2sys_list
   x2sys_merge
   x2sys_put
   x2sys_report
   x2sys_solve
   gmtflexure
   gmtgravmag3d
   gravfft
   grdflexure
   grdgravmag3d
   grdredpol
   grdseamount
   gravprisms
   talwani2d
   talwani3d
   mgd77manage
   mgd77convert
   mgd77header
   mgd77info
   mgd77list
   mgd77magref
   mgd77path
   mgd77sniffer
   mgd77track

.. raw:: latex

   % revert back to subsections
   \addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
   \setcounter{tocdepth}{2}
   \setcounter{secnumdepth}{2}
